# decimal

./: .gitignore  CMakeLists.txt  README.md
decimal/: decimal.hpp
tests/: CMakeLists.txt  unit_tests.cpp
